<resources>
    <string name="app_name">Foodstache</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number...</string>
    <string name="edit_your_profil">Edit your profil</string>
    <string name="nom_du_profil">Nom du profil...</string>
    <string name="username">Username...</string>
    <string name="bio">Bio...</string>
    <string name="add_a_profile_picture">Add a profile picture</string>
    <string name="browse">Browse</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="validate">Validate</string>
</resources>