<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilActivity"
    android:background="@color/primary">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/EditProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/edit_your_profil"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NomProfil"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomProfiltx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/nom_du_profil" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernametx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- EditText: Input Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Bio"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bioTx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/bio" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonenumberTx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_a_profile_picture"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="20sp">

            </TextView>

            <ImageView
                android:id="@+id/image_to_add"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/profil_picture_basic" />

            <Button
                android:id="@+id/browse_btn_image_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/browse"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/camera_btn_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/take_a_picture"
                android:textAllCaps="false" />


            <Button
                android:id="@+id/validateBtn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:text="@string/validate"
                android:textAllCaps="false"
                app:iconGravity="textStart" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>

